force-app/main/default/objects/Coach__c/Coach__c.object-meta.xml
<CustomObject>
    <label>Coach</label>
    <nameField>
        <label>Coach Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coachs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>