force-app/main/default/objects/Coach__c/fields/Base_Fare__c.field-meta.xml
<CustomField>
    <fullName>Base_Fare__c</fullName>
    <label>Base_Fare</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>