force-app/main/default/objects/Coach__c/fields/Coach_Number__c.field-meta.xml
<CustomField>
    <fullName>Coach_Number__c</fullName>
    <label>Coach_Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>