force-app/main/default/objects/Coach__c/fields/Layout_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Layout_Configuration__c</fullName>
    <label>Layout_Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>