force-app/main/default/objects/Coach__c/fields/Total_Seats__c.field-meta.xml
<CustomField>
    <fullName>Total_Seats__c</fullName>
    <label>Total_Seats</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>