force-app/main/default/objects/Coach__c/fields/Train__c.field-meta.xml
<CustomField>
    <fullName>Train__c</fullName>
    <label>Train</label>
    <referenceTo>Train__c</referenceTo>
    <relationshipLabel>Coachs</relationshipLabel>
    <relationshipName>Coachs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>